# AutoRXTE

./: CONFIG_GUIDE.md  CONFIG_QUICK_REF.md  DUAL_MODE_GUIDE.md  README.md  autorxte_config.yaml  autorxte_interactive.py  pyproject.toml  requirements.txt  setup.py
autorxte/: __init__.py  __version__.py  config.py
autorxte/advanced/: __init__.py  color_color_01.py  plotting_04.py  xenon_mode_03.py  xspec_fit_02.py
autorxte/cli/: main.py
autorxte/core/: __init__.py  bitmasks_04.py  download_01.py  extraction_06.py  filtering_05.py  lightcurves_07.py  organization_03.py  pds_09.py  preparation_02.py  spectra_08.py
autorxte/utils/: __init__.py  fits_utils.py  interactive.py  subprocess_utils.py
bitmasks/: README.md  bitmask_event
bitmasks/bitfiles_d/: bitfile_d_d012  bitfile_d_d0123  bitfile_d_d0124
bitmasks/bitfiles_gx/and/: bitfile_gx_d012  bitfile_gx_d0123  bitfile_gx_lr1  bitfile_gx_lr12  bitfile_gx_lr12_d012  bitfile_gx_lr12_d0123  bitfile_gx_lr1_d012  bitfile_gx_lr1_d0123  bitfile_gx_lr3  bitfile_gx_lr3_d012  bitfile_gx_lr3_d0123
bitmasks/bitfiles_gx/or/: bitfile_gx_d0124  bitfile_gx_lr12_d0124  bitfile_gx_lr1_d0124  bitfile_gx_lr3_d0124
bitmasks/bitfiles_z/and/: bitfile_z_d012  bitfile_z_d0123
bitmasks/bitfiles_z/or/: bitfile_z_d0124  bitfile_z_lr1  bitfile_z_lr12  bitfile_z_lr12_d012  bitfile_z_lr12_d0123  bitfile_z_lr12_d0124  bitfile_z_lr1_d012  (+6 more)
examples/: advanced_workflow.py  basic_workflow.py  config_high_energy.yaml  config_integration_example.py  config_qpo_analysis.yaml  config_soft_thermal.yaml  interactive_example.py  xenon_workflow.py
